report4/doc/implementatiemodel/vitalink/zwangerschapsregistratie/v0.1.0/oslo-converter-ea.report.md
#||# oslo-converter-ea for diagram Zwangerschapsregistratie

#||# -------------------------------------

2026-08-19T12:44:19.703Z info: [ConnectorConverterHandler]: Ignoring hidden connector (Model:implementatiemodel_zwangerschapsregistratie:OSLO-Generiek:Gemeente:(Gemeente -> Object))

2026-08-19T12:44:19.704Z info: [ConnectorConverterHandler]: Ignoring hidden connector (Model:implementatiemodel_zwangerschapsregistratie:OSLO-Generiek:FormeelKader:(FormeelKader -> Object))

2026-08-19T12:44:19.707Z info: Connector Model:implementatiemodel_zwangerschapsregistratie:OSLO-Gezondheidstoestand:Zwangerschap:(Zwangerschap -> Zwangerschapstoestand) is not an association with a source role. Ignoring this connector.

2026-08-19T12:44:19.708Z info: Connector Model:implementatiemodel_zwangerschapsregistratie:OSLO-Persoon:Persoon:(Persoon -> Organisatie) is not an association with a source role. Ignoring this connector.

2026-08-19T12:44:19.708Z info: Connector Model:implementatiemodel_zwangerschapsregistratie:OSLO-Persoon:Persoon:(Persoon -> Agent) is not an association with a source role. Ignoring this connector.

2026-08-19T12:44:19.708Z info: Connector Model:implementatiemodel_zwangerschapsregistratie:Zwangerschapsregistratie:Organisatie:(Organisatie -> Agent) is not an association with a source role. Ignoring this connector.

2026-08-19T12:44:19.708Z info: Connector Model:implementatiemodel_zwangerschapsregistratie:OSLO-Gezondheidstoestand:Zorgverlener:(Zorgverlener -> Agent) is not an association with a source role. Ignoring this connector.

2026-08-19T12:44:19.708Z info: Connector Model:implementatiemodel_zwangerschapsregistratie:OSLO-Persoon:Persoon:(Persoon -> Zwangerschap) is not an association with a source role. Ignoring this connector.

2026-08-19T12:44:19.709Z info: [PackageConverterHandler]: No value found for tag "baseURI" in package (Model). Using fallback URI (http://todo.com/) instead.

2026-08-19T12:44:19.719Z warn: [ConverterHandler]: Entity with path vastgesteld has an empty value for tag definition-nl.

#||# -------------------------------------

