report4/doc/implementatiemodel/vitalink/zwangerschapsregistratie/v0.1.6/oslo-converter-ea.report.md
#||# oslo-converter-ea for diagram Zwangerschapsregistratie

#||# -------------------------------------

2026-09-15T10:13:53.098Z info: [ConnectorConverterHandler]: Ignoring hidden connector (Model:implementatiemodel_zwangerschapsregistratie:OSLO-Generiek:Gemeente:(Gemeente -> Object))

2026-09-15T10:13:53.099Z info: [ConnectorConverterHandler]: Ignoring hidden connector (Model:implementatiemodel_zwangerschapsregistratie:OSLO-Generiek:FormeelKader:(FormeelKader -> Object))

2026-09-15T10:13:53.102Z info: Connector Model:implementatiemodel_zwangerschapsregistratie:OSLO-Gezondheidstoestand:Zwangerschap:(Zwangerschap -> Zwangerschapstoestand) is not an association with a source role. Ignoring this connector.

2026-09-15T10:13:53.102Z info: Connector Model:implementatiemodel_zwangerschapsregistratie:OSLO-Persoon:Persoon:(Persoon -> Organisatie) is not an association with a source role. Ignoring this connector.

2026-09-15T10:13:53.103Z info: Connector Model:implementatiemodel_zwangerschapsregistratie:OSLO-Persoon:Persoon:(Persoon -> Agent) is not an association with a source role. Ignoring this connector.

2026-09-15T10:13:53.103Z info: Connector Model:implementatiemodel_zwangerschapsregistratie:OSLO-Organisatie:Organisatie:(Organisatie -> Agent) is not an association with a source role. Ignoring this connector.

2026-09-15T10:13:53.103Z info: Connector Model:implementatiemodel_zwangerschapsregistratie:OSLO-Gezondheidstoestand:Zorgverlener:(Zorgverlener -> Agent) is not an association with a source role. Ignoring this connector.

2026-09-15T10:13:53.103Z info: Connector Model:implementatiemodel_zwangerschapsregistratie:Zwangerschapsregistratie:ZwangerschapEnvelope:(ZwangerschapEnvelope -> DataEnvelope) is not an association with a source role. Ignoring this connector.

2026-09-15T10:13:53.103Z info: Connector Model:implementatiemodel_zwangerschapsregistratie:Zwangerschapsregistratie:ZwangerschapLijstEnvelope:(ZwangerschapLijstEnvelope -> DataEnvelope) is not an association with a source role. Ignoring this connector.

2026-09-15T10:13:53.104Z info: [PackageConverterHandler]: No value found for tag "baseURI" in package (Model). Using fallback URI (http://todo.com/) instead.

2026-09-15T10:13:53.113Z error: [AttributeConverterHandler]: Unable to determine the range for attribute (Model:implementatiemodel_zwangerschapsregistratie:Zwangerschapsregistratie:DataEnvelope:data).

2026-09-15T10:13:53.113Z error: [AttributeConverterHandler]: Unable to determine the range for attribute (Model:implementatiemodel_zwangerschapsregistratie:Zwangerschapsregistratie:DataEnvelope:volgende).

2026-09-15T10:13:53.113Z error: [AttributeConverterHandler]: Unable to determine the range for attribute (Model:implementatiemodel_zwangerschapsregistratie:OSLO-Generiek-IM:Link:href).

#||# -------------------------------------

